--- a/scss/_colours.scss
+++ b/scss/_colours.scss
@@ -14,3 +14,14 @@ $milya:#422FFA;
 $swish:#FFBB41;
 $creditsuisse:#172F5B;
 $posters:#262626;
+
+
+//---Illustration Colours---//
+
+$illustration-splash: #FBB932;
+$illustration-pink: #FDE3E5;
+$illustration-purple: #E3ECFD;
+$illustration-navy: #080150;
+$illustration-blue: #F2FAFF;
+$illustration-salmon:#FDE9E9;
+$password-blue: #1989F9;
