--- a/css/master.css
+++ b/css/master.css
@@ -333,7 +333,6 @@ section.project-grid {
 
 article.casestudy-header {
   height: 150px;
-  width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: stretch; }
@@ -353,7 +352,6 @@ section.illustration-grid {
   display: grid;
   margin: 10em 0 4em 0;
   max-width: 1440px;
-  min-height: 840px;
   grid-column-gap: 50px;
   grid-row-gap: 50px;
   grid-template-columns: 1fr 1fr;
@@ -362,8 +360,9 @@ section.illustration-grid {
   @media (max-width: 599px) {
     section.illustration-grid {
       margin: 4em 0 4em 0;
-      grid-template-columns: 1fr;
-      grid-row-gap: 40px; } }
+      grid-template-columns: 1fr 1fr;
+      grid-row-gap: 50px;
+      grid-template-areas: "cs_header cs_header" "splash splash" "idtheft_grid1 idtheft_grid1" "idtheft_grid2 idtheft_grid2" "esports_grid1 esports_grid1" "esports_grid2 esports_grid2" "legup_grid legup_grid" "editorial_grid editorial_grid" "password_grid1 password_grid2" "password_grid3 password_grid4"; } }
   @media (max-width: 600px) {
     section.illustration-grid {
       grid-template-columns: 1fr;
@@ -383,19 +382,15 @@ section.illustration-grid {
       section.illustration-grid article.illustration-front {
         max-height: 70%; } }
   section.illustration-grid article.illustration-splash {
-    background-image: url(../img/illustrations/illustration-splash2.png);
-    background-size: 50%;
+    background-size: cover;
     background-position: center bottom;
     background-repeat: no-repeat;
-    min-width: 1440px;
     min-height: 600px;
     background-color: #FBB932; }
   section.illustration-grid article.idtheft1 {
-    background-image: url(../img/illustrations/idtheft-guy.png);
     background-size: 50%;
     background-position: center;
     background-repeat: no-repeat;
-    min-width: 695px;
     min-height: 600px;
     background-color: #FDE3E5; }
   section.illustration-grid article.idtheft2 {
@@ -403,7 +398,6 @@ section.illustration-grid {
     background-size: 50%;
     background-position: center;
     background-repeat: no-repeat;
-    min-width: 695px;
     min-height: 600px;
     background-color: #F2FAFF; }
   section.illustration-grid article.esports1 {
@@ -411,14 +405,12 @@ section.illustration-grid {
     background-size: 70%;
     background-position: center bottom;
     background-repeat: no-repeat;
-    min-width: 695px;
     min-height: 1225px;
     background-color: #080150; }
   section.illustration-grid article.esports2 {
     background-size: 50%;
     background-position: center bottom;
     background-repeat: no-repeat;
-    min-width: 455px;
     min-height: 600px;
     background-color: #080150; }
   section.illustration-grid article.esports-bk1 {
