--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -81,7 +81,7 @@ section.project-grid{
 article.casestudy-header{
   //border-bottom: $default-text 1px solid;
   height: 150px;
-  width:100%;
+  //width:100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: stretch;
@@ -110,7 +110,6 @@ section.illustration-grid{
   display:grid;
   margin: 10em 0 4em 0;
   max-width: 1440px;
-  min-height:840px;
   grid-column-gap: 50px;
   grid-row-gap: 50px;
   grid-template-columns: 1fr 1fr;
@@ -127,8 +126,20 @@ section.illustration-grid{
   "password_grid3 password_grid4";
   @include for-phone-only{
     margin: 4em 0 4em 0;
-    grid-template-columns: 1fr;
-    grid-row-gap: 40px;
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 50px;
+    grid-template-areas:
+    "cs_header cs_header"
+    "splash splash"
+    "idtheft_grid1 idtheft_grid1"
+    "idtheft_grid2 idtheft_grid2"
+    "esports_grid1 esports_grid1"
+    "esports_grid2 esports_grid2"
+    "legup_grid legup_grid"
+    "editorial_grid editorial_grid"
+    "password_grid1 password_grid2"
+    "password_grid3 password_grid4";
+
     }
   @include for-tablet-portait-up{
     grid-template-columns: 1fr;
@@ -152,20 +163,24 @@ section.illustration-grid{
 
     //--Illustration backgrounds & Images--//
     article.illustration-splash{
-    background-image: url(../img/illustrations/illustration-splash2.png);
-    background-size: 50%;
+    //@include background-retina("../img/illustrations/illustrations-splash","png");
+    //background-image: url(../img/illustrations/illustration-splash2.png);
+    background-size: cover;
     background-position: center bottom;
     background-repeat: no-repeat;
-    min-width:1440px;
+    //min-width:1440px;
     min-height:600px;
     background-color: $illustration-splash;
+    @include for-phone-only{
+    }
     }
     article.idtheft1{
-    background-image: url(../img/illustrations/idtheft-guy.png);
+
+    //background-image: url(../img/illustrations/idtheft-guy.png);
     background-size: 50%;
     background-position: center;
     background-repeat: no-repeat;
-    min-width: 695px;
+    //min-width: 695px;
     min-height: 600px;
     background-color: $illustration-pink;
     }
@@ -174,7 +189,7 @@ section.illustration-grid{
     background-size: 50%;
     background-position: center;
     background-repeat: no-repeat;
-    min-width:695px;
+    //min-width:695px;
     min-height: 600px;
     background-color: $illustration-blue;
     }
@@ -183,7 +198,7 @@ section.illustration-grid{
     background-size: 70%;
     background-position: center bottom;
     background-repeat: no-repeat;
-    min-width: 695px;
+    //min-width: 695px;
     min-height:1225px;
     background-color: $illustration-navy;
     }
@@ -191,7 +206,7 @@ section.illustration-grid{
     background-size: 50%;
     background-position: center bottom;
     background-repeat: no-repeat;
-    min-width: 455px;
+    //min-width: 455px;
     min-height:600px;
     background-color: $illustration-navy;
     }
