deletes min width

--- a/css/master.css
+++ b/css/master.css
@@ -360,9 +360,9 @@ section.illustration-grid {
   @media (max-width: 599px) {
     section.illustration-grid {
       margin: 4em 0 4em 0;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr;
       grid-row-gap: 50px;
-      grid-template-areas: "cs_header cs_header" "splash splash" "idtheft_grid1 idtheft_grid1" "idtheft_grid2 idtheft_grid2" "esports_grid1 esports_grid1" "esports_grid2 esports_grid2" "legup_grid legup_grid" "editorial_grid editorial_grid" "password_grid1 password_grid2" "password_grid3 password_grid4"; } }
+      grid-template-areas: "cs_header" "splash" ". idtheft_grid1 ." "idtheft_grid2 idtheft_grid2" "esports_grid1 esports_grid1" "esports_grid2 esports_grid2" "legup_grid legup_grid" "editorial_grid editorial_grid" "password_grid1 password_grid2" "password_grid3 password_grid4"; } }
   @media (max-width: 600px) {
     section.illustration-grid {
       grid-template-columns: 1fr;
@@ -385,12 +385,14 @@ section.illustration-grid {
     background-size: cover;
     background-position: center bottom;
     background-repeat: no-repeat;
+    max-width: 1440px;
     min-height: 600px;
     background-color: #FBB932; }
   section.illustration-grid article.idtheft1 {
     background-size: 50%;
     background-position: center;
     background-repeat: no-repeat;
+    max-width: 695px;
     min-height: 600px;
     background-color: #FDE3E5; }
   section.illustration-grid article.idtheft2 {
@@ -398,6 +400,7 @@ section.illustration-grid {
     background-size: 50%;
     background-position: center;
     background-repeat: no-repeat;
+    max-width: 695px;
     min-height: 600px;
     background-color: #F2FAFF; }
   section.illustration-grid article.esports1 {
@@ -405,12 +408,14 @@ section.illustration-grid {
     background-size: 70%;
     background-position: center bottom;
     background-repeat: no-repeat;
+    max-width: 695px;
     min-height: 1225px;
     background-color: #080150; }
   section.illustration-grid article.esports2 {
     background-size: 50%;
     background-position: center bottom;
     background-repeat: no-repeat;
+    max-width: 455px;
     min-height: 600px;
     background-color: #080150; }
   section.illustration-grid article.esports-bk1 {
@@ -422,7 +427,7 @@ section.illustration-grid {
     background-size: 60%;
     background-position: center;
     background-repeat: no-repeat;
-    min-width: 1440px;
+    max-width: 1440px;
     min-height: 800px;
     background-color: #F2FAFF; }
   section.illustration-grid article.editorial {
@@ -430,11 +435,11 @@ section.illustration-grid {
     background-size: 90%;
     background-position: center;
     background-repeat: no-repeat;
-    min-width: 1440px;
+    max-width: 1440px;
     min-height: 800px;
     background-color: #FDE9E9; }
   section.illustration-grid article.password {
-    min-width: 695px;
+    max-width: 695px;
     min-height: 600px;
     background-color: #1989F9; }
   section.illustration-grid article.password-bk1 {
