fixes css grid on projects/illustrations page

--- a/css/master.css
+++ b/css/master.css
@@ -264,8 +264,8 @@ p {
 
 section.project-grid {
   margin: 4em 0 4em 0;
-  width: 1440px;
-  max-width: 1440px;
+  width: 1400px;
+  max-width: 1400px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
@@ -332,34 +332,45 @@ section.project-grid {
   background-position: center; }
 
 article.casestudy-header {
-  height: 150px;
   display: grid;
-  grid-template-columns: 1fr 1fr; }
+  grid-template-columns: 3fr 4fr;
+  grid-gap: 50px;
+  grid-template-areas: "casestudy_title casestudy_description"; }
   @media (max-width: 599px) {
     article.casestudy-header {
-      grid-template-columns: 1fr; } }
+      grid-gap: 10px;
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 1fr;
+      grid-template-areas: "casestudy_title" "casestudy_description"; } }
+  @media (max-width: 600px) {
+    article.casestudy-header {
+      grid-gap: 10px;
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 1fr;
+      grid-template-areas: "casestudy_title" "casestudy_description"; } }
 
 aside.casestudy-title {
-  height: 200px; }
+  grid-area: casestudy_title; }
 
 aside.casestudy-description {
-  height: 250px; }
+  grid-area: casestudy_description; }
 
 section.illustration-grid {
   display: grid;
   margin: 10em 0 4em 0;
-  max-width: 1440px;
+  max-width: 1400px;
   grid-column-gap: 50px;
   grid-row-gap: 50px;
   grid-template-columns: 1fr 1fr;
-  justify-content: center;
+  justify-items: stretch;
+  align-items: stretch;
   grid-template-areas: "cs_header cs_header" "splash splash" "idtheft_grid1 esports_grid1" "idtheft_grid2 esports_grid1" "esports_grid2 esports_grid3" "legup_grid legup_grid" "editorial_grid editorial_grid" "password_grid1 password_grid2" "password_grid3 password_grid4"; }
   @media (max-width: 599px) {
     section.illustration-grid {
       margin: 4em 0 4em 0;
       grid-template-columns: 1fr;
       grid-row-gap: 50px;
-      grid-template-areas: "cs_header" "splash" ". idtheft_grid1 ." "idtheft_grid2 idtheft_grid2" "esports_grid1 esports_grid1" "esports_grid2 esports_grid2" "legup_grid legup_grid" "editorial_grid editorial_grid" "password_grid1 password_grid2" "password_grid3 password_grid4"; } }
+      grid-template-areas: "cs_header" "splash" "idtheft_grid1" "idtheft_grid2 idtheft_grid2" "esports_grid1 esports_grid1" "esports_grid2 esports_grid2" "legup_grid legup_grid" "editorial_grid editorial_grid" "password_grid1 password_grid2" "password_grid3 password_grid4"; } }
   @media (max-width: 600px) {
     section.illustration-grid {
       grid-template-columns: 1fr;
@@ -367,7 +378,11 @@ section.illustration-grid {
   @media (max-width: 900px) {
     section.illustration-grid {
       grid-template-columns: 1fr;
-      grid-row-gap: 40px; } }
+      grid-row-gap: 40px;
+      grid-column-gap: 0px; } }
+  @media (max-width: 1400px) {
+    section.illustration-grid {
+      margin: 10em 2.5em 4em 2.5em; } }
   section.illustration-grid article.illustration-front {
     border: 1px solid green;
     width: 100%;
@@ -377,8 +392,10 @@ section.illustration-grid {
         max-height: 50%; } }
     @media (max-width: 600px) {
       section.illustration-grid article.illustration-front {
-        max-height: 70%; } }
+        width: 80%;
+        padding: 0 5em 0 5em; } }
   section.illustration-grid article.illustration-splash {
+    background-image: url(../img/illustrations/illustration-splash2.png);
     background-size: cover;
     background-position: center bottom;
     background-repeat: no-repeat;
@@ -386,33 +403,28 @@ section.illustration-grid {
     min-height: 600px;
     background-color: #FBB932; }
   section.illustration-grid article.idtheft1 {
-    background-size: 50%;
+    background-image: url(../img/illustrations/idtheft-guy.png);
+    background-size: 60%;
     background-position: center;
     background-repeat: no-repeat;
-    max-width: 695px;
-    min-height: 600px;
     background-color: #FDE3E5; }
   section.illustration-grid article.idtheft2 {
     background-image: url(../img/illustrations/idtheft-girl.png);
-    background-size: 50%;
+    background-size: 60%;
     background-position: center;
     background-repeat: no-repeat;
-    max-width: 695px;
-    min-height: 600px;
     background-color: #F2FAFF; }
   section.illustration-grid article.esports1 {
     background-image: url(../img/illustrations/esports-1.png);
     background-size: 70%;
     background-position: center bottom;
     background-repeat: no-repeat;
-    max-width: 695px;
     min-height: 1225px;
     background-color: #080150; }
   section.illustration-grid article.esports2 {
     background-size: 50%;
     background-position: center bottom;
     background-repeat: no-repeat;
-    max-width: 455px;
     min-height: 600px;
     background-color: #080150; }
   section.illustration-grid article.esports-bk1 {
@@ -424,7 +436,6 @@ section.illustration-grid {
     background-size: 60%;
     background-position: center;
     background-repeat: no-repeat;
-    max-width: 1440px;
     min-height: 800px;
     background-color: #F2FAFF; }
   section.illustration-grid article.editorial {
@@ -432,7 +443,6 @@ section.illustration-grid {
     background-size: 90%;
     background-position: center;
     background-repeat: no-repeat;
-    max-width: 1440px;
     min-height: 800px;
     background-color: #FDE9E9; }
   section.illustration-grid article.password {
