--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -4,8 +4,8 @@
 
 section.project-grid{
   margin: 4em 0 4em 0;
-  width: 1440px;
-  max-width: 1440px;
+  width: 1400px;
+  max-width: 1400px;
   display:grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
@@ -79,27 +79,37 @@ section.project-grid{
 //--Case Study Layouts--//
 
 article.casestudy-header{
-  //border-bottom: $default-text 1px solid;
-  height: 150px;
-  //width:100%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  //align-items: stretch;
+  grid-template-columns: 3fr 4fr;
+  grid-gap: 50px;
+  //align-items: center;
+  grid-template-areas:
+  "casestudy_title casestudy_description";
   @include for-phone-only{
+    grid-gap: 10px;
     grid-template-columns: 1fr;
-
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+    "casestudy_title"
+    "casestudy_description";
+  }
+  @include for-tablet-portait-up{
+    grid-gap: 10px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+    "casestudy_title"
+    "casestudy_description";
   }
 }
 
 aside.casestudy-title{
-  height:200px;
-  //width:695px;
-  //border: 1px solid green;
+//border: 1px solid blue;
+grid-area:casestudy_title;
 }
 aside.casestudy-description{
-  height:250px;
-  //width: 695px;
-  //border: 1px solid blue;
+//border: 1px solid blue;
+grid-area:casestudy_description;
 }
 
 
@@ -109,11 +119,12 @@ section.illustration-grid{
   //border: 1px solid red;
   display:grid;
   margin: 10em 0 4em 0;
-  max-width: 1440px;
+  max-width: 1400px;
   grid-column-gap: 50px;
   grid-row-gap: 50px;
-  grid-template-columns: 1fr 1fr;
-  justify-content: center;
+  grid-template-columns:1fr 1fr;
+  justify-items: stretch;
+  align-items: stretch;
   grid-template-areas:
   "cs_header cs_header"
   "splash splash"
@@ -131,7 +142,7 @@ section.illustration-grid{
     grid-template-areas:
     "cs_header"
     "splash"
-    ". idtheft_grid1 ."
+    "idtheft_grid1"
     "idtheft_grid2 idtheft_grid2"
     "esports_grid1 esports_grid1"
     "esports_grid2 esports_grid2"
@@ -148,7 +159,16 @@ section.illustration-grid{
   @include for-tablet-landscape-up{
     grid-template-columns: 1fr;
     grid-row-gap: 40px;
+    grid-column-gap: 0px;
   }
+
+  @include for-hd-desktop{
+    margin: 10em 2.5em 4em 2.5em;
+  }
+
+
+
+
     article.illustration-front{
       border: 1px solid green;
       width: 100%;
@@ -157,40 +177,35 @@ section.illustration-grid{
         max-height: 50%;
       }
       @include for-tablet-portait-up{
-        max-height: 70%;
+        width: 80%;
+        padding: 0 5em 0 5em;
       }
     }
 
     //--Illustration backgrounds & Images--//
     article.illustration-splash{
     //@include background-retina("../img/illustrations/illustrations-splash","png");
-    //background-image: url(../img/illustrations/illustration-splash2.png);
+    background-image: url(../img/illustrations/illustration-splash2.png);
     background-size: cover;
     background-position: center bottom;
     background-repeat: no-repeat;
     max-width:1440px;
     min-height:600px;
     background-color: $illustration-splash;
-    @include for-phone-only{
     }
-    }
-    article.idtheft1{
 
-    //background-image: url(../img/illustrations/idtheft-guy.png);
-    background-size: 50%;
+    article.idtheft1{
+    background-image: url(../img/illustrations/idtheft-guy.png);
+    background-size: 60%;
     background-position: center;
     background-repeat: no-repeat;
-    max-width: 695px;
-    min-height: 600px;
     background-color: $illustration-pink;
     }
     article.idtheft2{
     background-image: url(../img/illustrations/idtheft-girl.png);
-    background-size: 50%;
+    background-size: 60%;
     background-position: center;
     background-repeat: no-repeat;
-    max-width:695px;
-    min-height: 600px;
     background-color: $illustration-blue;
     }
     article.esports1{
@@ -198,7 +213,7 @@ section.illustration-grid{
     background-size: 70%;
     background-position: center bottom;
     background-repeat: no-repeat;
-    max-width: 695px;
+    //max-width: 695px;
     min-height:1225px;
     background-color: $illustration-navy;
     }
@@ -206,7 +221,7 @@ section.illustration-grid{
     background-size: 50%;
     background-position: center bottom;
     background-repeat: no-repeat;
-    max-width: 455px;
+    //max-width: 455px;
     min-height:600px;
     background-color: $illustration-navy;
     }
@@ -223,7 +238,7 @@ section.illustration-grid{
     background-size: 60%;
     background-position: center;
     background-repeat: no-repeat;
-    max-width: 1440px;
+    //max-width: 1440px;
     min-height: 800px;
     background-color: $illustration-blue;
     }
@@ -232,7 +247,7 @@ section.illustration-grid{
     background-size: 90%;
     background-position: center;
     background-repeat: no-repeat;
-    max-width: 1440px;
+    //max-width: 1440px;
     min-height: 800px;
     background-color: $illustration-salmon;
     }
