--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -79,6 +79,7 @@ section.project-grid{
 //--Case Study Layouts--//
 
 article.casestudy-header{
+  border: 1px solid red;
   display: grid;
   grid-template-columns: 3fr 4fr;
   grid-gap: 50px;
@@ -86,17 +87,17 @@ article.casestudy-header{
   grid-template-areas:
   "casestudy_title casestudy_description";
   @include for-phone-only{
-    grid-gap: 10px;
+    grid-gap: 5px;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 3fr;
     grid-template-areas:
     "casestudy_title"
     "casestudy_description";
   }
   @include for-tablet-portait-up{
-    grid-gap: 10px;
+    grid-gap: 5px;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    //grid-template-rows: 1fr 1fr;
     grid-template-areas:
     "casestudy_title"
     "casestudy_description";
@@ -104,11 +105,11 @@ article.casestudy-header{
 }
 
 aside.casestudy-title{
-//border: 1px solid blue;
+border: 1px solid blue;
 grid-area:casestudy_title;
 }
 aside.casestudy-description{
-//border: 1px solid blue;
+border: 1px solid blue;
 grid-area:casestudy_description;
 }
 
@@ -116,7 +117,7 @@ grid-area:casestudy_description;
 //----- Illustrations Grid ---- //
 
 section.illustration-grid{
-  //border: 1px solid red;
+  border: 1px solid red;
   display:grid;
   margin: 10em 0 4em 0;
   max-width: 1400px;
@@ -138,23 +139,27 @@ section.illustration-grid{
   @include for-phone-only{
     margin: 4em 0 4em 0;
     grid-template-columns: 1fr;
-    grid-row-gap: 50px;
+    grid-row-gap: 20px;
     grid-template-areas:
     "cs_header"
     "splash"
     "idtheft_grid1"
-    "idtheft_grid2 idtheft_grid2"
-    "esports_grid1 esports_grid1"
-    "esports_grid2 esports_grid2"
-    "legup_grid legup_grid"
-    "editorial_grid editorial_grid"
-    "password_grid1 password_grid2"
-    "password_grid3 password_grid4";
+    "idtheft_grid2"
+    "esports_grid1"
+    "esports_grid2"
+    "esports-grid3"
+    "legup_grid"
+    "editorial_grid"
+    "password_grid1"
+    " password_grid2"
+    "password_grid3"
+    "password_grid4";
 
     }
   @include for-tablet-portait-up{
     grid-template-columns: 1fr;
     grid-row-gap: 40px;
+    grid-column-gap: 0px;
   }
   @include for-tablet-landscape-up{
     grid-template-columns: 1fr;
@@ -165,8 +170,6 @@ section.illustration-grid{
   @include for-hd-desktop{
     margin: 10em 2.5em 4em 2.5em;
   }
-
-
 
 
     article.illustration-front{
@@ -196,7 +199,7 @@ section.illustration-grid{
 
     article.idtheft1{
     background-image: url(../img/illustrations/idtheft-guy.png);
-    background-size: 60%;
+    background-size: 50%;
     background-position: center;
     background-repeat: no-repeat;
     background-color: $illustration-pink;
@@ -214,7 +217,7 @@ section.illustration-grid{
     background-position: center bottom;
     background-repeat: no-repeat;
     //max-width: 695px;
-    min-height:1225px;
+    //min-height:1225px;
     background-color: $illustration-navy;
     }
     article.esports2{
