--- a/css/master.css
+++ b/css/master.css
@@ -332,7 +332,6 @@ section.project-grid {
   background-position: center; }
 
 article.casestudy-header {
-  border: 1px solid red;
   display: grid;
   grid-template-columns: 3fr 4fr;
   grid-gap: 50px;
@@ -341,24 +340,26 @@ article.casestudy-header {
     article.casestudy-header {
       grid-gap: 5px;
       grid-template-columns: 1fr;
-      grid-template-rows: 1fr 3fr;
+      grid-template-rows: 1fr 4fr;
       grid-template-areas: "casestudy_title" "casestudy_description"; } }
   @media (max-width: 600px) {
     article.casestudy-header {
       grid-gap: 5px;
       grid-template-columns: 1fr;
       grid-template-areas: "casestudy_title" "casestudy_description"; } }
+  @media (max-width: 900px) {
+    article.casestudy-header {
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 4fr;
+      grid-template-areas: "casestudy_title" "casestudy_description"; } }
 
 aside.casestudy-title {
-  border: 1px solid blue;
   grid-area: casestudy_title; }
 
 aside.casestudy-description {
-  border: 1px solid blue;
   grid-area: casestudy_description; }
 
 section.illustration-grid {
-  border: 1px solid red;
   display: grid;
   margin: 10em 0 4em 0;
   max-width: 1400px;
@@ -370,20 +371,24 @@ section.illustration-grid {
   grid-template-areas: "cs_header cs_header" "splash splash" "idtheft_grid1 esports_grid1" "idtheft_grid2 esports_grid1" "esports_grid2 esports_grid3" "legup_grid legup_grid" "editorial_grid editorial_grid" "password_grid1 password_grid2" "password_grid3 password_grid4"; }
   @media (max-width: 599px) {
     section.illustration-grid {
+      grid-template-rows: 2% auto;
       margin: 4em 0 4em 0;
-      grid-template-columns: 1fr;
       grid-row-gap: 20px;
       grid-template-areas: "cs_header" "splash" "idtheft_grid1" "idtheft_grid2" "esports_grid1" "esports_grid2" "esports-grid3" "legup_grid" "editorial_grid" "password_grid1" " password_grid2" "password_grid3" "password_grid4"; } }
   @media (max-width: 600px) {
     section.illustration-grid {
+      grid-template-rows: 2% auto;
       grid-template-columns: 1fr;
       grid-row-gap: 40px;
-      grid-column-gap: 0px; } }
+      grid-column-gap: 0px;
+      grid-template-areas: "cs_header" "splash" "idtheft_grid1" "idtheft_grid2" "esports_grid1" "esports_grid2" "esports-grid3" "legup_grid" "editorial_grid" "password_grid1" " password_grid2" "password_grid3" "password_grid4"; } }
   @media (max-width: 900px) {
     section.illustration-grid {
+      grid-template-rows: 1fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr;
       grid-template-columns: 1fr;
       grid-row-gap: 40px;
-      grid-column-gap: 0px; } }
+      grid-column-gap: 0px;
+      grid-template-areas: "cs_header" "splash" "idtheft_grid1" "idtheft_grid2" "esports_grid1" "esports_grid2" "esports-grid3" "legup_grid" "editorial_grid" "password_grid1" " password_grid2" "password_grid3" "password_grid4"; } }
   @media (max-width: 1400px) {
     section.illustration-grid {
       margin: 10em 2.5em 4em 2.5em; } }
@@ -399,22 +404,28 @@ section.illustration-grid {
         width: 80%;
         padding: 0 5em 0 5em; } }
   section.illustration-grid article.illustration-splash {
-    background-image: url(../img/illustrations/illustration-splash2.png);
-    background-size: cover;
+    background-image: url(../img/illustrations/illustration-splash@2x.png);
+    background-size: 50%;
     background-position: center bottom;
     background-repeat: no-repeat;
     max-width: 1440px;
     min-height: 600px;
     background-color: #FBB932; }
+    @media (max-width: 599px) {
+      section.illustration-grid article.illustration-splash {
+        background-size: 80%;
+        max-height: 200px; } }
   section.illustration-grid article.idtheft1 {
     background-image: url(../img/illustrations/idtheft-guy.png);
     background-size: 50%;
+    height: 600px;
     background-position: center;
     background-repeat: no-repeat;
     background-color: #FDE3E5; }
   section.illustration-grid article.idtheft2 {
     background-image: url(../img/illustrations/idtheft-girl.png);
     background-size: 60%;
+    height: 600px;
     background-position: center;
     background-repeat: no-repeat;
     background-color: #F2FAFF; }
@@ -424,12 +435,20 @@ section.illustration-grid {
     background-position: center bottom;
     background-repeat: no-repeat;
     background-color: #080150; }
+    @media (max-width: 599px) {
+      section.illustration-grid article.esports1 {
+        background-size: 80%;
+        max-height: 800px; } }
   section.illustration-grid article.esports2 {
     background-size: 50%;
     background-position: center bottom;
     background-repeat: no-repeat;
     min-height: 600px;
     background-color: #080150; }
+    @media (max-width: 599px) {
+      section.illustration-grid article.esports2 {
+        background-size: 80%;
+        max-height: 800px; } }
   section.illustration-grid article.esports-bk1 {
     background-image: url(../img/illustrations/esports-2.png); }
   section.illustration-grid article.esports-bk2 {
