--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -79,7 +79,7 @@ section.project-grid{
 //--Case Study Layouts--//
 
 article.casestudy-header{
-  border: 1px solid red;
+  //border: 1px solid red;
   display: grid;
   grid-template-columns: 3fr 4fr;
   grid-gap: 50px;
@@ -89,7 +89,7 @@ article.casestudy-header{
   @include for-phone-only{
     grid-gap: 5px;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 1fr 4fr;
     grid-template-areas:
     "casestudy_title"
     "casestudy_description";
@@ -97,7 +97,13 @@ article.casestudy-header{
   @include for-tablet-portait-up{
     grid-gap: 5px;
     grid-template-columns: 1fr;
-    //grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+    "casestudy_title"
+    "casestudy_description";
+  }
+  @include for-tablet-landscape-up{
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 4fr;
     grid-template-areas:
     "casestudy_title"
     "casestudy_description";
@@ -105,11 +111,11 @@ article.casestudy-header{
 }
 
 aside.casestudy-title{
-border: 1px solid blue;
+//border: 1px solid blue;
 grid-area:casestudy_title;
 }
 aside.casestudy-description{
-border: 1px solid blue;
+//border: 1px solid blue;
 grid-area:casestudy_description;
 }
 
@@ -117,7 +123,7 @@ grid-area:casestudy_description;
 //----- Illustrations Grid ---- //
 
 section.illustration-grid{
-  border: 1px solid red;
+  //border: 1px solid red;
   display:grid;
   margin: 10em 0 4em 0;
   max-width: 1400px;
@@ -137,8 +143,9 @@ section.illustration-grid{
   "password_grid1 password_grid2"
   "password_grid3 password_grid4";
   @include for-phone-only{
+    grid-template-rows: 2% auto;
     margin: 4em 0 4em 0;
-    grid-template-columns: 1fr;
+    //grid-template-columns: 1fr;
     grid-row-gap: 20px;
     grid-template-areas:
     "cs_header"
@@ -157,14 +164,44 @@ section.illustration-grid{
 
     }
   @include for-tablet-portait-up{
+    grid-template-rows: 2% auto;
     grid-template-columns: 1fr;
     grid-row-gap: 40px;
     grid-column-gap: 0px;
+    grid-template-areas:
+    "cs_header"
+    "splash"
+    "idtheft_grid1"
+    "idtheft_grid2"
+    "esports_grid1"
+    "esports_grid2"
+    "esports-grid3"
+    "legup_grid"
+    "editorial_grid"
+    "password_grid1"
+    " password_grid2"
+    "password_grid3"
+    "password_grid4";
   }
   @include for-tablet-landscape-up{
+    grid-template-rows: 1fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr;
     grid-template-columns: 1fr;
     grid-row-gap: 40px;
     grid-column-gap: 0px;
+    grid-template-areas:
+    "cs_header"
+    "splash"
+    "idtheft_grid1"
+    "idtheft_grid2"
+    "esports_grid1"
+    "esports_grid2"
+    "esports-grid3"
+    "legup_grid"
+    "editorial_grid"
+    "password_grid1"
+    " password_grid2"
+    "password_grid3"
+    "password_grid4";
   }
 
   @include for-hd-desktop{
@@ -188,18 +225,24 @@ section.illustration-grid{
     //--Illustration backgrounds & Images--//
     article.illustration-splash{
     //@include background-retina("../img/illustrations/illustrations-splash","png");
-    background-image: url(../img/illustrations/illustration-splash2.png);
-    background-size: cover;
+    background-image: url(../img/illustrations/illustration-splash@2x.png);
+    background-size: 50%;
     background-position: center bottom;
     background-repeat: no-repeat;
     max-width:1440px;
     min-height:600px;
     background-color: $illustration-splash;
+    @include for-phone-only{
+      background-size: 80%;
+      max-height: 200px;
+    }
+
     }
 
     article.idtheft1{
     background-image: url(../img/illustrations/idtheft-guy.png);
     background-size: 50%;
+    height:600px;
     background-position: center;
     background-repeat: no-repeat;
     background-color: $illustration-pink;
@@ -207,6 +250,7 @@ section.illustration-grid{
     article.idtheft2{
     background-image: url(../img/illustrations/idtheft-girl.png);
     background-size: 60%;
+    height:600px;
     background-position: center;
     background-repeat: no-repeat;
     background-color: $illustration-blue;
@@ -219,6 +263,10 @@ section.illustration-grid{
     //max-width: 695px;
     //min-height:1225px;
     background-color: $illustration-navy;
+    @include for-phone-only{
+      background-size: 80%;
+      max-height: 800px;
+    }
     }
     article.esports2{
     background-size: 50%;
@@ -227,6 +275,10 @@ section.illustration-grid{
     //max-width: 455px;
     min-height:600px;
     background-color: $illustration-navy;
+    @include for-phone-only{
+      background-size: 80%;
+      max-height: 800px;
+    }
     }
     article.esports-bk1{
     background-image: url(../img/illustrations/esports-2.png);
