--- a/css/master.css
+++ b/css/master.css
@@ -366,50 +366,36 @@ section.illustration-grid {
   grid-column-gap: 50px;
   grid-row-gap: 50px;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 200px 800px 600px 800px 600px 800px 800px 500px 500px;
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas: "cs_header cs_header" "splash splash" "idtheft_grid1 esports_grid1" "idtheft_grid2 esports_grid1" "esports_grid2 esports_grid3" "legup_grid legup_grid" "editorial_grid editorial_grid" "password_grid1 password_grid2" "password_grid3 password_grid4"; }
   @media (max-width: 599px) {
     section.illustration-grid {
-      grid-template-rows: 2% auto;
       margin: 4em 0 4em 0;
       grid-row-gap: 20px;
-      grid-template-areas: "cs_header" "splash" "idtheft_grid1" "idtheft_grid2" "esports_grid1" "esports_grid2" "esports-grid3" "legup_grid" "editorial_grid" "password_grid1" " password_grid2" "password_grid3" "password_grid4"; } }
+      grid-column-gap: 0px;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-areas: "cs_header" "splash" "idtheft_grid1" "idtheft_grid2" "esports_grid1" "esports_grid2" "esports-grid3" "legup_grid" "editorial_grid" "password_grid1" "password_grid2" "password_grid3" "password_grid4"; } }
   @media (max-width: 600px) {
     section.illustration-grid {
-      grid-template-rows: 2% auto;
-      grid-template-columns: 1fr;
-      grid-row-gap: 40px;
-      grid-column-gap: 0px;
-      grid-template-areas: "cs_header" "splash" "idtheft_grid1" "idtheft_grid2" "esports_grid1" "esports_grid2" "esports-grid3" "legup_grid" "editorial_grid" "password_grid1" " password_grid2" "password_grid3" "password_grid4"; } }
+      grid-template-columns: 1fr 1fr;
+      grid-row-gap: 20px;
+      grid-template-areas: "cs_header cs_header" "splash splash" "idtheft_grid1 idtheft_grid1" "idtheft_grid2 idtheft_grid2" "esports_grid1 esports_grid1" "esports_grid2 esports_grid2" "esports-grid3 esports-grid3" "legup_grid legup_grid" "editorial_grid editorial_grid" "password_grid1 password_grid1" "password_grid2 password_grid2" "password_grid3 password_grid3" "password_grid4 password_grid4"; } }
   @media (max-width: 900px) {
     section.illustration-grid {
-      grid-template-rows: 1fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr;
-      grid-template-columns: 1fr;
-      grid-row-gap: 40px;
-      grid-column-gap: 0px;
-      grid-template-areas: "cs_header" "splash" "idtheft_grid1" "idtheft_grid2" "esports_grid1" "esports_grid2" "esports-grid3" "legup_grid" "editorial_grid" "password_grid1" " password_grid2" "password_grid3" "password_grid4"; } }
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 40px;
+      grid-template-rows: 300px 500px 300px 300px 400px 600px 600px 300px 300px; } }
   @media (max-width: 1400px) {
     section.illustration-grid {
       margin: 10em 2.5em 4em 2.5em; } }
-  section.illustration-grid article.illustration-front {
-    border: 1px solid green;
-    width: 100%;
-    height: 840px; }
-    @media (max-width: 599px) {
-      section.illustration-grid article.illustration-front {
-        max-height: 50%; } }
-    @media (max-width: 600px) {
-      section.illustration-grid article.illustration-front {
-        width: 80%;
-        padding: 0 5em 0 5em; } }
   section.illustration-grid article.illustration-splash {
     background-image: url(../img/illustrations/illustration-splash@2x.png);
     background-size: 50%;
     background-position: center bottom;
     background-repeat: no-repeat;
     max-width: 1440px;
-    min-height: 600px;
     background-color: #FBB932; }
     @media (max-width: 599px) {
       section.illustration-grid article.illustration-splash {
@@ -418,14 +404,12 @@ section.illustration-grid {
   section.illustration-grid article.idtheft1 {
     background-image: url(../img/illustrations/idtheft-guy.png);
     background-size: 50%;
-    height: 600px;
     background-position: center;
     background-repeat: no-repeat;
     background-color: #FDE3E5; }
   section.illustration-grid article.idtheft2 {
     background-image: url(../img/illustrations/idtheft-girl.png);
     background-size: 60%;
-    height: 600px;
     background-position: center;
     background-repeat: no-repeat;
     background-color: #F2FAFF; }
@@ -437,18 +421,15 @@ section.illustration-grid {
     background-color: #080150; }
     @media (max-width: 599px) {
       section.illustration-grid article.esports1 {
-        background-size: 80%;
-        max-height: 800px; } }
+        background-size: 80%; } }
   section.illustration-grid article.esports2 {
     background-size: 50%;
     background-position: center bottom;
     background-repeat: no-repeat;
-    min-height: 600px;
     background-color: #080150; }
     @media (max-width: 599px) {
       section.illustration-grid article.esports2 {
-        background-size: 80%;
-        max-height: 800px; } }
+        background-size: 80%; } }
   section.illustration-grid article.esports-bk1 {
     background-image: url(../img/illustrations/esports-2.png); }
   section.illustration-grid article.esports-bk2 {
@@ -458,22 +439,18 @@ section.illustration-grid {
     background-size: 60%;
     background-position: center;
     background-repeat: no-repeat;
-    min-height: 800px;
     background-color: #F2FAFF; }
   section.illustration-grid article.editorial {
     background-image: url(../img/illustrations/editorial.png);
     background-size: 90%;
     background-position: center;
     background-repeat: no-repeat;
-    min-height: 800px;
     background-color: #FDE9E9; }
     @media (max-width: 599px) {
       section.illustration-grid article.editorial {
         background-size: 80%;
         max-height: 500px; } }
   section.illustration-grid article.password {
-    max-width: 695px;
-    min-height: 400px;
     background-color: #1989F9; }
   section.illustration-grid article.password-bk1 {
     background-size: 60%;
@@ -523,6 +500,30 @@ section.illustration-grid {
     grid-area: password_grid3; }
   section.illustration-grid article.password-grid4 {
     grid-area: password_grid4; }
+
+section.swish-grid {
+  display: grid;
+  margin: 10em 0 4em 0;
+  max-width: 1400px; }
+
+section.swish-title {
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr;
+  grid-column-gap: 50px; }
+  @media (max-width: 599px) {
+    section.swish-title {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      grid-template-areas: "swish_header swish_header" "swish_description1 swish_description2"; } }
+
+aside.swish-header {
+  grid-area: swish_header; }
+
+aside.swish-description1 {
+  grid-area: swish_description1; }
+
+aside.swish-description2 {
+  grid-area: swish_description12; }
 
 body {
   font-family: 'Inter UI', sans-serif; }
