--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -122,6 +122,7 @@ grid-area:casestudy_description;
 
 //----- Illustrations Grid ---- //
 
+
 section.illustration-grid{
   //border: 1px solid red;
   display:grid;
@@ -130,6 +131,7 @@ section.illustration-grid{
   grid-column-gap: 50px;
   grid-row-gap: 50px;
   grid-template-columns:1fr 1fr;
+  grid-template-rows: 200px 800px 600px 800px 600px 800px 800px 500px 500px;
   justify-items: stretch;
   align-items: stretch;
   grid-template-areas:
@@ -143,10 +145,10 @@ section.illustration-grid{
   "password_grid1 password_grid2"
   "password_grid3 password_grid4";
   @include for-phone-only{
-    grid-template-rows: 2% auto;
     margin: 4em 0 4em 0;
-    //grid-template-columns: 1fr;
     grid-row-gap: 20px;
+    grid-column-gap: 0px;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas:
     "cs_header"
     "splash"
@@ -158,69 +160,39 @@ section.illustration-grid{
     "legup_grid"
     "editorial_grid"
     "password_grid1"
-    " password_grid2"
+    "password_grid2"
     "password_grid3"
     "password_grid4";
 
     }
   @include for-tablet-portait-up{
-    grid-template-rows: 2% auto;
-    grid-template-columns: 1fr;
-    grid-row-gap: 40px;
-    grid-column-gap: 0px;
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap:20px;
     grid-template-areas:
-    "cs_header"
-    "splash"
-    "idtheft_grid1"
-    "idtheft_grid2"
-    "esports_grid1"
-    "esports_grid2"
-    "esports-grid3"
-    "legup_grid"
-    "editorial_grid"
-    "password_grid1"
-    " password_grid2"
-    "password_grid3"
-    "password_grid4";
+    "cs_header cs_header"
+    "splash splash"
+    "idtheft_grid1 idtheft_grid1"
+    "idtheft_grid2 idtheft_grid2"
+    "esports_grid1 esports_grid1"
+    "esports_grid2 esports_grid2"
+    "esports-grid3 esports-grid3"
+    "legup_grid legup_grid"
+    "editorial_grid editorial_grid"
+    "password_grid1 password_grid1"
+    "password_grid2 password_grid2"
+    "password_grid3 password_grid3"
+    "password_grid4 password_grid4";
   }
   @include for-tablet-landscape-up{
-    grid-template-rows: 1fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr;
-    grid-template-columns: 1fr;
-    grid-row-gap: 40px;
-    grid-column-gap: 0px;
-    grid-template-areas:
-    "cs_header"
-    "splash"
-    "idtheft_grid1"
-    "idtheft_grid2"
-    "esports_grid1"
-    "esports_grid2"
-    "esports-grid3"
-    "legup_grid"
-    "editorial_grid"
-    "password_grid1"
-    " password_grid2"
-    "password_grid3"
-    "password_grid4";
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 40px;
+    grid-template-rows: 300px 500px 300px 300px 400px 600px 600px 300px 300px;
   }
 
   @include for-hd-desktop{
     margin: 10em 2.5em 4em 2.5em;
   }
 
-
-    article.illustration-front{
-      border: 1px solid green;
-      width: 100%;
-      height: 840px;
-      @include for-phone-only{
-        max-height: 50%;
-      }
-      @include for-tablet-portait-up{
-        width: 80%;
-        padding: 0 5em 0 5em;
-      }
-    }
 
     //--Illustration backgrounds & Images--//
     article.illustration-splash{
@@ -230,19 +202,16 @@ section.illustration-grid{
     background-position: center bottom;
     background-repeat: no-repeat;
     max-width:1440px;
-    min-height:600px;
     background-color: $illustration-splash;
     @include for-phone-only{
       background-size: 80%;
       max-height: 200px;
     }
-
     }
 
     article.idtheft1{
     background-image: url(../img/illustrations/idtheft-guy.png);
     background-size: 50%;
-    height:600px;
     background-position: center;
     background-repeat: no-repeat;
     background-color: $illustration-pink;
@@ -250,7 +219,7 @@ section.illustration-grid{
     article.idtheft2{
     background-image: url(../img/illustrations/idtheft-girl.png);
     background-size: 60%;
-    height:600px;
+
     background-position: center;
     background-repeat: no-repeat;
     background-color: $illustration-blue;
@@ -260,12 +229,10 @@ section.illustration-grid{
     background-size: 70%;
     background-position: center bottom;
     background-repeat: no-repeat;
-    //max-width: 695px;
-    //min-height:1225px;
     background-color: $illustration-navy;
     @include for-phone-only{
       background-size: 80%;
-      max-height: 800px;
+      //max-height: 800px;
     }
     }
     article.esports2{
@@ -273,11 +240,9 @@ section.illustration-grid{
     background-position: center bottom;
     background-repeat: no-repeat;
     //max-width: 455px;
-    min-height:600px;
     background-color: $illustration-navy;
     @include for-phone-only{
       background-size: 80%;
-      max-height: 800px;
     }
     }
     article.esports-bk1{
@@ -293,8 +258,6 @@ section.illustration-grid{
     background-size: 60%;
     background-position: center;
     background-repeat: no-repeat;
-    //max-width: 1440px;
-    min-height: 800px;
     background-color: $illustration-blue;
     }
     article.editorial{
@@ -302,8 +265,6 @@ section.illustration-grid{
     background-size: 90%;
     background-position: center;
     background-repeat: no-repeat;
-    //max-width: 1440px;
-    min-height: 800px;
     background-color: $illustration-salmon;
     @include for-phone-only{
       background-size: 80%;
@@ -311,8 +272,7 @@ section.illustration-grid{
     }
     }
     article.password{
-    max-width:695px;
-    min-height:400px;
+    //max-width:695px;
     background-color: $password-blue;
     }
 
@@ -384,4 +344,35 @@ article.password-grid3{
 article.password-grid4{
   grid-area:password_grid4;
 }
+}
+
+
+
+//--- Swish Grid --- //
+section.swish-grid{
+  display:grid;
+  margin: 10em 0 4em 0;
+  max-width: 1400px;
+}
+section.swish-title{
+  display:grid;
+  grid-template-columns: 3fr 1fr 1fr;
+  grid-column-gap: 50px;
+  @include for-phone-only{
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+    "swish_header swish_header"
+    "swish_description1 swish_description2"
+    ;
+  }
+}
+aside.swish-header{
+  grid-area:swish_header;
+}
+aside.swish-description1{
+  grid-area:swish_description1;
+}
+aside.swish-description2{
+  grid-area:swish_description12;
 }
