--- a/css/master.css
+++ b/css/master.css
@@ -8,6 +8,10 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Mono:300");
 @import url("https://rsms.me/inter/inter-ui.css");
 @import url("https://fonts.googleapis.com/css?family=Roboto+Mono:300");
+@import url("https://rsms.me/inter/inter-ui.css");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:300");
+@import url("https://rsms.me/inter/inter-ui.css");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:300");
 body {
   font-family: 'Inter UI', sans-serif; }
 
@@ -501,30 +505,6 @@ section.illustration-grid {
   section.illustration-grid article.password-grid4 {
     grid-area: password_grid4; }
 
-section.swish-grid {
-  display: grid;
-  margin: 10em 0 4em 0;
-  max-width: 1400px; }
-
-section.swish-title {
-  display: grid;
-  grid-template-columns: 3fr 1fr 1fr;
-  grid-column-gap: 50px; }
-  @media (max-width: 599px) {
-    section.swish-title {
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      grid-template-areas: "swish_header swish_header" "swish_description1 swish_description2"; } }
-
-aside.swish-header {
-  grid-area: swish_header; }
-
-aside.swish-description1 {
-  grid-area: swish_description1; }
-
-aside.swish-description2 {
-  grid-area: swish_description12; }
-
 body {
   font-family: 'Inter UI', sans-serif; }
 
@@ -733,6 +713,451 @@ nav {
 nav.scroll {
   background-color: #F7F7F7;
   color: #eef; }
+
+body {
+  font-family: 'Inter UI', sans-serif; }
+
+a.logo, a.blog, xw {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: bolder;
+  font-size: 0.8em;
+  color: #3E3535;
+  letter-spacing: 1.2px; }
+
+a.blog {
+  padding: 0px 7.5px 0px 7.5px; }
+
+a.logo:hover, a.blog:hover, a.projects:hover {
+  color: #FF3769;
+  transition-duration: 0.2s; }
+
+ul {
+  font-size: 1em;
+  list-style: none;
+  padding: 0; }
+
+a.elsewhere {
+  font-size: 1em;
+  list-style: none;
+  padding-right: 0.2em;
+  color: #3E3535;
+  text-decoration: none; }
+
+a.elsewhere:hover {
+  color: #FF3769;
+  transition-duration: 0.2s; }
+
+blockquote.attention {
+  font-size: 2.5em;
+  color: #FF3769;
+  padding: 0;
+  margin: 0; }
+  @media (max-width: 599px) {
+    blockquote.attention {
+      font-size: 1.2em; } }
+
+h1 {
+  font-weight: 400;
+  font-size: 2.5em;
+  color: #3E3535; }
+  @media (max-width: 599px) {
+    h1 {
+      font-size: 1.2em;
+      width: 100%;
+      line-height: 1.5em; } }
+
+h2 {
+  margin: 0;
+  font-size: 22px;
+  font-weight: bolder; }
+
+h3 {
+  margin: 0;
+  font-size: 64px;
+  font-weight: lighter; }
+
+caption {
+  margin: 0;
+  font-size: 12px;
+  font-weight: normal; }
+
+p {
+  font-size: 18px;
+  margin: 0;
+  font-weight: lighter; }
+
+body {
+  font-family: 'Inter UI', sans-serif; }
+
+a.logo, a.blog, xw {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: bolder;
+  font-size: 0.8em;
+  color: #3E3535;
+  letter-spacing: 1.2px; }
+
+a.blog {
+  padding: 0px 7.5px 0px 7.5px; }
+
+a.logo:hover, a.blog:hover, a.projects:hover {
+  color: #FF3769;
+  transition-duration: 0.2s; }
+
+ul {
+  font-size: 1em;
+  list-style: none;
+  padding: 0; }
+
+a.elsewhere {
+  font-size: 1em;
+  list-style: none;
+  padding-right: 0.2em;
+  color: #3E3535;
+  text-decoration: none; }
+
+a.elsewhere:hover {
+  color: #FF3769;
+  transition-duration: 0.2s; }
+
+blockquote.attention {
+  font-size: 2.5em;
+  color: #FF3769;
+  padding: 0;
+  margin: 0; }
+  @media (max-width: 599px) {
+    blockquote.attention {
+      font-size: 1.2em; } }
+
+h1 {
+  font-weight: 400;
+  font-size: 2.5em;
+  color: #3E3535; }
+  @media (max-width: 599px) {
+    h1 {
+      font-size: 1.2em;
+      width: 100%;
+      line-height: 1.5em; } }
+
+h2 {
+  margin: 0;
+  font-size: 22px;
+  font-weight: bolder; }
+
+h3 {
+  margin: 0;
+  font-size: 64px;
+  font-weight: lighter; }
+
+caption {
+  margin: 0;
+  font-size: 12px;
+  font-weight: normal; }
+
+p {
+  font-size: 18px;
+  margin: 0;
+  font-weight: lighter; }
+
+section.project-grid {
+  margin: 4em 0 4em 0;
+  width: 1400px;
+  max-width: 1400px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-row-gap: 25px;
+  grid-column-gap: 20px; }
+  @media (max-width: 599px) {
+    section.project-grid {
+      grid-template-columns: 1fr;
+      grid-row-gap: 40px; } }
+  @media (max-width: 600px) {
+    section.project-grid {
+      grid-template-columns: 1fr;
+      grid-row-gap: 40px; } }
+  @media (max-width: 900px) {
+    section.project-grid {
+      grid-template-columns: 1fr;
+      grid-row-gap: 40px; } }
+
+.project-image {
+  background-color: #EBEBEB;
+  height: 350px;
+  margin: 0; }
+  @media (max-width: 599px) {
+    .project-image {
+      height: 220px; } }
+
+.project-box {
+  align-self: start;
+  margin: 2em; }
+
+.project-info {
+  max-width: 580px;
+  margin: 1.5em 0 0 0;
+  line-height: 22px; }
+
+#milya-background {
+  background-image: url("/img/milya-placeholder.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; }
+
+#swish-background {
+  background-image: url("/img/swish-placeholder.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; }
+
+#creditsuisse-background {
+  background-image: url("/img/milya-placeholder.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; }
+
+#movingposters-background {
+  background-image: url("/img/movingposter-placeholder.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; }
+
+#illustrations-background {
+  background-image: url("/img/illustration-placeholder.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; }
+
+article.casestudy-header {
+  display: grid;
+  grid-template-columns: 3fr 4fr;
+  grid-gap: 50px;
+  grid-template-areas: "casestudy_title casestudy_description"; }
+  @media (max-width: 599px) {
+    article.casestudy-header {
+      grid-gap: 5px;
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 4fr;
+      grid-template-areas: "casestudy_title" "casestudy_description"; } }
+  @media (max-width: 600px) {
+    article.casestudy-header {
+      grid-gap: 5px;
+      grid-template-columns: 1fr;
+      grid-template-areas: "casestudy_title" "casestudy_description"; } }
+  @media (max-width: 900px) {
+    article.casestudy-header {
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 4fr;
+      grid-template-areas: "casestudy_title" "casestudy_description"; } }
+
+aside.casestudy-title {
+  grid-area: casestudy_title; }
+
+aside.casestudy-description {
+  grid-area: casestudy_description; }
+
+section.illustration-grid {
+  display: grid;
+  margin: 10em 0 4em 0;
+  max-width: 1400px;
+  grid-column-gap: 50px;
+  grid-row-gap: 50px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 200px 800px 600px 800px 600px 800px 800px 500px 500px;
+  justify-items: stretch;
+  align-items: stretch;
+  grid-template-areas: "cs_header cs_header" "splash splash" "idtheft_grid1 esports_grid1" "idtheft_grid2 esports_grid1" "esports_grid2 esports_grid3" "legup_grid legup_grid" "editorial_grid editorial_grid" "password_grid1 password_grid2" "password_grid3 password_grid4"; }
+  @media (max-width: 599px) {
+    section.illustration-grid {
+      margin: 4em 0 4em 0;
+      grid-row-gap: 20px;
+      grid-column-gap: 0px;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-areas: "cs_header" "splash" "idtheft_grid1" "idtheft_grid2" "esports_grid1" "esports_grid2" "esports-grid3" "legup_grid" "editorial_grid" "password_grid1" "password_grid2" "password_grid3" "password_grid4"; } }
+  @media (max-width: 600px) {
+    section.illustration-grid {
+      grid-template-columns: 1fr 1fr;
+      grid-row-gap: 20px;
+      grid-template-areas: "cs_header cs_header" "splash splash" "idtheft_grid1 idtheft_grid1" "idtheft_grid2 idtheft_grid2" "esports_grid1 esports_grid1" "esports_grid2 esports_grid2" "esports-grid3 esports-grid3" "legup_grid legup_grid" "editorial_grid editorial_grid" "password_grid1 password_grid1" "password_grid2 password_grid2" "password_grid3 password_grid3" "password_grid4 password_grid4"; } }
+  @media (max-width: 900px) {
+    section.illustration-grid {
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 40px;
+      grid-template-rows: 300px 500px 300px 300px 400px 600px 600px 300px 300px; } }
+  @media (max-width: 1400px) {
+    section.illustration-grid {
+      margin: 10em 2.5em 4em 2.5em; } }
+  section.illustration-grid article.illustration-splash {
+    background-image: url(../img/illustrations/illustration-splash@2x.png);
+    background-size: 50%;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    max-width: 1440px;
+    background-color: #FBB932; }
+    @media (max-width: 599px) {
+      section.illustration-grid article.illustration-splash {
+        background-size: 80%;
+        max-height: 200px; } }
+  section.illustration-grid article.idtheft1 {
+    background-image: url(../img/illustrations/idtheft-guy.png);
+    background-size: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #FDE3E5; }
+  section.illustration-grid article.idtheft2 {
+    background-image: url(../img/illustrations/idtheft-girl.png);
+    background-size: 60%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #F2FAFF; }
+  section.illustration-grid article.esports1 {
+    background-image: url(../img/illustrations/esports-1.png);
+    background-size: 70%;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-color: #080150; }
+    @media (max-width: 599px) {
+      section.illustration-grid article.esports1 {
+        background-size: 80%; } }
+  section.illustration-grid article.esports2 {
+    background-size: 50%;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-color: #080150; }
+    @media (max-width: 599px) {
+      section.illustration-grid article.esports2 {
+        background-size: 80%; } }
+  section.illustration-grid article.esports-bk1 {
+    background-image: url(../img/illustrations/esports-2.png); }
+  section.illustration-grid article.esports-bk2 {
+    background-image: url(../img/illustrations/esports-3.png); }
+  section.illustration-grid article.legup {
+    background-image: url(../img/illustrations/legup.png);
+    background-size: 60%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #F2FAFF; }
+  section.illustration-grid article.editorial {
+    background-image: url(../img/illustrations/editorial.png);
+    background-size: 90%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #FDE9E9; }
+    @media (max-width: 599px) {
+      section.illustration-grid article.editorial {
+        background-size: 80%;
+        max-height: 500px; } }
+  section.illustration-grid article.password {
+    background-color: #1989F9; }
+  section.illustration-grid article.password-bk1 {
+    background-size: 60%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url(../img/illustrations/password1.png); }
+  section.illustration-grid article.password-bk2 {
+    background-size: 60%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url(../img/illustrations/password2.png); }
+  section.illustration-grid article.password-bk3 {
+    background-size: 60%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url(../img/illustrations/password3.png); }
+  section.illustration-grid article.password-bk4 {
+    background-size: 40%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url(../img/illustrations/password4.png); }
+  section.illustration-grid article.cs-header-grid {
+    grid-area: cs_header; }
+  section.illustration-grid article.splash {
+    grid-area: splash; }
+  section.illustration-grid article.idtheft-grid1 {
+    grid-area: idtheft_grid1; }
+  section.illustration-grid article.idtheft-grid2 {
+    grid-area: idtheft_grid2; }
+  section.illustration-grid article.esports-grid1 {
+    grid-area: esports_grid1; }
+  section.illustration-grid article.esports-grid2 {
+    grid-area: esports_grid2; }
+  section.illustration-grid article.esports-grid3 {
+    grid-area: esports_grid3; }
+  section.illustration-grid article.esports-grid4 {
+    grid-area: esports_grid4; }
+  section.illustration-grid article.legup-grid {
+    grid-area: legup_grid; }
+  section.illustration-grid article.editorial-grid {
+    grid-area: editorial_grid; }
+  section.illustration-grid article.password-grid1 {
+    grid-area: password_grid1; }
+  section.illustration-grid article.password-grid2 {
+    grid-area: password_grid2; }
+  section.illustration-grid article.password-grid3 {
+    grid-area: password_grid3; }
+  section.illustration-grid article.password-grid4 {
+    grid-area: password_grid4; }
+
+section.swish-grid {
+  display: grid;
+  margin: 10em 0 4em 0;
+  max-width: 1400px;
+  grid-row-gap: 40px;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: stretch;
+  grid-template-rows: 120px 800px 440px 700px;
+  grid-template-areas: "swish_header swish_header swish_header" "swish_splash swish_splash swish_splash" ". swish_quote swish_quote" "swish_screen1 swish_wishlist swish_delivery"; }
+  @media (max-width: 599px) {
+    section.swish-grid {
+      margin: 2em 0 4em 0;
+      grid-gap: 40px;
+      grid-template-columns: 1fr;
+      grid-template-rows: 300px 400px 300px 500px 500px 500px;
+      grid-template-areas: "swish_header " "swish_splash" "swish_quote" "swish_screen1" "swish_wishlist" "swish_delivery"; } }
+  @media (max-width: 1400px) {
+    section.swish-grid {
+      margin: 10em 2.5em 4em 2.5em; } }
+  section.swish-grid .swish-header {
+    grid-area: swish_header;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-gap: 50px; }
+    @media (max-width: 599px) {
+      section.swish-grid .swish-header {
+        grid-template-columns: 1fr;
+        grid-gap: 40px;
+        grid-template-rows: 70px 70px 70px; } }
+  section.swish-grid .swish-splash {
+    grid-area: swish_splash;
+    background-image: url(../img/swish/swish-splash.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat; }
+  section.swish-grid article.swish-quote {
+    grid-area: swish_quote;
+    align-self: center; }
+  section.swish-grid .swish-screen1 {
+    grid-area: swish_screen1;
+    background-image: url(../img/swish/swish-screen1.png);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #F7F7F7; }
+  section.swish-grid .swish-wishlist {
+    grid-area: swish_wishlist;
+    background-image: url(../img/swish/swish-wishlist1.png);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #F7F7F7; }
+  section.swish-grid .swish-delivery {
+    grid-area: swish_delivery;
+    background-image: url(../img/swish/swish-delivery.png);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #F7F7F7; }
 
 html {
   background-color: #F7F7F7;
